--- a/public/login.html
+++ b/public/login.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Prod.AI – Login</title>
+  <title>AI.Synth – Login</title>
   
   <!-- Three.js - Biblioteca 3D -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r134/three.min.js"></script>
@@ -457,7 +457,7 @@
   <div id="vanta-bg"></div>
   
   <div class="container">
-    <h1 class="logo">Prod.AI</h1>
+    <h1 class="logo">AI.Synth</h1>
     <p class="subtitle">Acesse sua conta</p>
 
     <!-- Mensagens de status -->
@@ -634,9 +634,9 @@
         scaleMobile: 1.00,
         color: 0x5A00A0,        // Roxo nas linhas da rede
         backgroundColor: 0x0a0a1a, // Fundo escuro (preto)
-        points: 15.00,           // Número de pontos da rede
+        points: 25.00,           // Número de pontos da rede
         maxDistance: 25.00,      // Distância máxima das conexões
-        spacing: 18.00,          // Espaçamento entre pontos
+        spacing: 16.00,          // Espaçamento entre pontos
         showDots: true          // Mostrar os pontos
       });
       
