--- a/public/landing.html
+++ b/public/landing.html
@@ -880,10 +880,10 @@
             <a href="login.html" class="cta-button">EXPLORAR AGORA</a>
         </div>
     </section>
-
+    
     <!-- About Section -->
-    <section class="section scroll-reveal" id="about-intro">
-        <h2 class="section-title">O QUE É A AI.SYNTH?</h2>
+    <section class="section" id="about-intro" style="padding-top: 0px; padding-bottom: 30px; margin-top: -120px;">
+        <h2 class="section-title scroll-reveal">O QUE É A AI.SYNTH?</h2>
         <div class="about-text" style="max-width: 900px; margin: 0 auto; text-align: center;">
             <p style="font-size: 1.4rem; line-height: 1.9; color: var(--text-secondary); letter-spacing: 1px; text-shadow: 0 2px 10px rgba(0, 255, 255, 0.3);">
                 <strong style="color: var(--neon-cyan);">Ai.Synth é uma plataforma inteligente que usa inteligência artificial para impulsionar a produtividade de produtores musicais.</strong> Usando IA, ela te ajuda a tirar dúvidas, resolver problemas técnicos, aprender novas técnicas e encontrar soluções rápidas para tudo o que envolve produzir música.
