Atualizar o landing.html

--- a/public/landing.html
+++ b/public/landing.html
@@ -1406,5 +1406,5 @@
         // Initialize everything when DOM is loaded
         console.log('Site futurista carregado com sucesso!');
     </script>
-</body>h
+</body>
 </html>
