--- a/public/landing.html
+++ b/public/landing.html
@@ -775,6 +775,10 @@
                 font-size: clamp(2rem, 10vw, 4rem);
             }
             
+            .scroll-indicator {
+                left: 48.8%;
+            }
+            
             .section {
                 padding: 40px 20px;
             }
