--- a/public/landing.html
+++ b/public/landing.html
@@ -851,7 +851,8 @@
             }
             
             .scroll-indicator {
-                left: 55%;
+                left: 46%;
+                bottom: 120px;
             }
             
             .section {
