--- a/public/landing.html
+++ b/public/landing.html
@@ -846,6 +846,11 @@
                 display: flex;
             }
             
+            .hero {
+                min-height: 85vh;
+                max-height: 85vh;
+            }
+            
             .hero-title {
                 font-size: clamp(2rem, 10vw, 4rem);
             }
