--- a/public/landing.html
+++ b/public/landing.html
@@ -856,8 +856,8 @@
             }
             
             .scroll-indicator {
-                left: 46%;
-                bottom: 150px;
+                left: 46% !important;
+                bottom: 180px !important;
             }
             
             .section {
