--- a/public/landing.html
+++ b/public/landing.html
@@ -1002,7 +1002,7 @@
         <div class="hero-content">
             <h1 class="hero-title">BEM-VINDO AO FUTURO</h1>
             <p class="hero-subtitle">PRODUÇÃO MUSICAL INTELIGENTE</p>
-            <a href="#about-intro" class="cta-button" id="explore-btn">EXPLORAR AGORA</a>
+            <a href="login.html" class="cta-button" id="explore-btn">EXPLORAR AGORA</a>
         </div>
         
         <!-- Scroll Indicator -->
