--- a/public/index.html
+++ b/public/index.html
@@ -129,6 +129,10 @@
     <!-- Script integrado com as funcionalidades existentes -->
     <!-- Otimizado: Removido cache busting desnecessário para melhor cache -->
     <script src="script.js" defer></script>
+    
+    <!-- 🎤 VOICE MESSAGE INTEGRATION - PROD.AI -->
+    <script src="voice-integration-prodai.js" defer></script>
+    
     <!-- Scripts de monitoramento desabilitados para performance -->
     <!-- <script src="plan-monitor.js"></script> -->
     <!-- <script src="force-visibility.js"></script> -->
