--- a/public/index.html
+++ b/public/index.html
@@ -130,8 +130,8 @@
     <!-- Otimizado: Removido cache busting desnecessário para melhor cache -->
     <script src="script.js" defer></script>
     
-    <!-- 🎤 VOICE MESSAGE INTEGRATION - PROD.AI -->
-    <script src="voice-integration-prodai.js" defer></script>
+    <!-- 🎤 VOICE MESSAGE SIMPLE - PROD.AI -->
+    <script src="voice-super-simple.js" defer></script>
     
     <!-- Scripts de monitoramento desabilitados para performance -->
     <!-- <script src="plan-monitor.js"></script> -->
