--- a/public/index.html
+++ b/public/index.html
@@ -131,7 +131,7 @@
     <script src="script.js" defer></script>
     
     <!-- 🎤 VOICE MESSAGE SIMPLE - PROD.AI -->
-    <script src="voice-super-simple.js" defer></script>
+    <script src="voice-simple-fixed.js" defer></script>
     
     <!-- Scripts de monitoramento desabilitados para performance -->
     <!-- <script src="plan-monitor.js"></script> -->
