--- a/public/index.html
+++ b/public/index.html
@@ -192,8 +192,8 @@
                     <p class="supported-formats">Suporta: MP3, WAV, M4A, OGG (máx. 10MB)</p>
                     <input type="file" id="modalAudioFileInput" 
                            accept="audio/mp3,audio/wav,audio/mpeg,audio/mp4,audio/m4a,audio/aac,audio/ogg,audio/webm,.mp3,.wav,.m4a,.aac,.ogg,.webm" 
-                           style="position: absolute; left: -9999px; opacity: 0; pointer-events: none;">
-                    <button class="upload-btn" onclick="triggerMobileFileUpload()" 
+                           style="display:none;">
+                    <button class="upload-btn" id="uploadAudioBtn" 
                             style="touch-action: manipulation; -webkit-tap-highlight-color: rgba(0, 150, 255, 0.3);">
                         Escolher Arquivo
                     </button>
