--- a/public/index.html
+++ b/public/index.html
@@ -193,7 +193,7 @@
                     <input type="file" id="modalAudioFileInput" 
                            accept="audio/mp3,audio/wav,audio/mpeg,audio/mp4,audio/m4a,audio/aac,audio/ogg,audio/webm,.mp3,.wav,.m4a,.aac,.ogg,.webm" 
                            style="position:absolute;left:-9999px;opacity:0;width:1px;height:1px;" tabindex="-1">
-                    <label for="modalAudioFileInput" id="uploadAudioBtn"
+                    <label for="modalAudioFileInput"
                         class="upload-btn"
                         style="touch-action: manipulation; -webkit-tap-highlight-color: rgba(0, 150, 255, 0.3); width:100%; pointer-events:auto; display:inline-block; text-align:center; cursor:pointer;">
                         Escolher Arquivo
