--- a/public/audio-analyzer-interface.html
+++ b/public/audio-analyzer-interface.html
@@ -67,7 +67,7 @@
 
     <!-- Ações -->
     <div class="analysis-actions">
-      <button class="action-btn primary" onclick="sendAnalysisToChat()">
+      <button class="action-btn primary" onclick="sendModalAnalysisToChat()">
         🤖 Pedir Ajuda à IA
       </button>
       <button class="action-btn secondary" onclick="downloadAnalysis()">
