--- a/public/index.html
+++ b/public/index.html
@@ -60,16 +60,17 @@
             </div>
             
             <div class="chatbot-input-section" id="chatbotInputSection">
-                <div class="chatbot-input-field">
-                    <svg class="chatbot-mic-icon" width="20" height="20" viewBox="0 0 384 512" fill="currentColor">
-                        <path d="M192 0C139 0 96 43 96 96v160c0 53 43 96 96 96s96-43 96-96V96c0-53-43-96-96-96zM64 216c0-13.3-10.7-24-24-24s-24 10.7-24 24v40c0 89.1 66.2 162.7 152 174.4V464h-48c-13.3 0-24 10.7-24 24s10.7 24 24 24h144c13.3 0 24-10.7 24-24s-10.7-24-24-24h-48v-33.6c85.8-11.7 152-85.3 152-174.4v-40c0-13.3-10.7-24-24-24s-24 10.7-24 24v40c0 70.7-57.3 128-128 128s-128-57.3-128-128V216z"/>
-                    </svg>
+                <div class="chatbot-input-field chat-input-container">
+                    <button class="chatbot-add-btn chat-plus-btn" aria-label="Adicionar">+</button>
                     <input type="text" 
-                           class="chatbot-main-input" 
+                           class="chatbot-main-input chat-text-input" 
                            id="chatbotMainInput" 
                            placeholder="Digite aqui..."
                            maxlength="500">
-                    <button class="chatbot-send-button" id="chatbotSendButton">
+                    <svg class="chatbot-mic-icon chat-mic-btn" width="20" height="20" viewBox="0 0 384 512" fill="currentColor">
+                        <path d="M192 0C139 0 96 43 96 96v160c0 53 43 96 96 96s96-43 96-96V96c0-53-43-96-96-96zM64 216c0-13.3-10.7-24-24-24s-24 10.7-24 24v40c0 89.1 66.2 162.7 152 174.4V464h-48c-13.3 0-24 10.7-24 24s10.7 24 24 24h144c13.3 0 24-10.7 24-24s-10.7-24-24-24h-48v-33.6c85.8-11.7 152-85.3 152-174.4v-40c0-13.3-10.7-24-24-24s-24 10.7-24 24v40c0 70.7-57.3 128-128 128s-128-57.3-128-128V216z"/>
+                    </svg>
+                    <button class="chatbot-send-button chat-send-btn" id="chatbotSendButton">
                         <svg width="24" height="24" viewBox="0 0 24 24" fill="none">
                             <path d="M2 21L23 12L2 3V10L17 12L2 14V21Z" fill="white" stroke="none"/>
                         </svg>
@@ -99,16 +100,17 @@
                     <span></span>
                     <span></span>
                 </div>
-                <div class="chatbot-active-input-field">
-                    <svg class="chatbot-mic-icon" width="20" height="20" viewBox="0 0 384 512" fill="currentColor">
-                        <path d="M192 0C139 0 96 43 96 96v160c0 53 43 96 96 96s96-43 96-96V96c0-53-43-96-96-96zM64 216c0-13.3-10.7-24-24-24s-24 10.7-24 24v40c0 89.1 66.2 162.7 152 174.4V464h-48c-13.3 0-24 10.7-24 24s10.7 24 24 24h144c13.3 0 24-10.7 24-24s-10.7-24-24-24h-48v-33.6c85.8-11.7 152-85.3 152-174.4v-40c0-13.3-10.7-24-24-24s-24 10.7-24 24v40c0 70.7-57.3 128-128 128s-128-57.3-128-128V216z"/>
-                    </svg>
+          <div class="chatbot-active-input-field chat-input-container">
+              <button class="chatbot-add-btn chat-plus-btn" aria-label="Adicionar">+</button>
                     <input type="text" 
-                           class="chatbot-active-input" 
+                  class="chatbot-active-input chat-text-input" 
                            id="chatbotActiveInput" 
                            placeholder="Digite sua mensagem..."
                            maxlength="500">
-                    <button class="chatbot-active-send-btn" id="chatbotActiveSendBtn">
+              <svg class="chatbot-mic-icon chat-mic-btn" width="20" height="20" viewBox="0 0 384 512" fill="currentColor">
+                        <path d="M192 0C139 0 96 43 96 96v160c0 53 43 96 96 96s96-43 96-96V96c0-53-43-96-96-96zM64 216c0-13.3-10.7-24-24-24s-24 10.7-24 24v40c0 89.1 66.2 162.7 152 174.4V464h-48c-13.3 0-24 10.7-24 24s10.7 24 24 24h144c13.3 0 24-10.7 24-24s-10.7-24-24-24h-48v-33.6c85.8-11.7 152-85.3 152-174.4v-40c0-13.3-10.7-24-24-24s-24 10.7-24 24v40c0 70.7-57.3 128-128 128s-128-57.3-128-128V216z"/>
+                    </svg>
+              <button class="chatbot-active-send-btn chat-send-btn" id="chatbotActiveSendBtn">
                         <svg width="22" height="22" viewBox="0 0 24 24" fill="none">
                             <path d="M2 21L23 12L2 3V10L17 12L2 14V21Z" fill="white" stroke="none"/>
                         </svg>
