--- a/public/index.html
+++ b/public/index.html
@@ -61,7 +61,18 @@
             
             <div class="chatbot-input-section" id="chatbotInputSection">
                 <div class="chatbot-input-field chat-input-container">
-                    <button class="chatbot-add-btn chat-plus-btn" aria-label="Adicionar">+</button>
+                    <button
+                      class="chatbot-add-btn chat-plus-btn"
+                      aria-label="Adicionar"
+                      type="button"
+                      style="all:unset;display:inline-flex;align-items:center;justify-content:center;width:28px;height:28px;margin:0 8px 0 10px;cursor:pointer;border-radius:6px;background:transparent;"
+                    >
+                      <svg width="16" height="16" viewBox="0 0 24 24" fill="none"
+                           xmlns="http://www.w3.org/2000/svg"
+                           style="display:block;stroke:#fff;stroke-width:2">
+                        <path d="M12 5v14M5 12h14" />
+                      </svg>
+                    </button>
                     <input type="text" 
                            class="chatbot-main-input chat-text-input" 
                            id="chatbotMainInput" 
@@ -101,7 +112,18 @@
                     <span></span>
                 </div>
           <div class="chatbot-active-input-field chat-input-container">
-              <button class="chatbot-add-btn chat-plus-btn" aria-label="Adicionar">+</button>
+              <button
+                class="chatbot-add-btn chat-plus-btn"
+                aria-label="Adicionar"
+                type="button"
+                style="all:unset;display:inline-flex;align-items:center;justify-content:center;width:28px;height:28px;margin:0 8px 0 10px;cursor:pointer;border-radius:6px;background:transparent;"
+              >
+                <svg width="16" height="16" viewBox="0 0 24 24" fill="none"
+                     xmlns="http://www.w3.org/2000/svg"
+                     style="display:block;stroke:#fff;stroke-width:2">
+                  <path d="M12 5v14M5 12h14" />
+                </svg>
+              </button>
                     <input type="text" 
                   class="chatbot-active-input chat-text-input" 
                            id="chatbotActiveInput" 
@@ -118,50 +140,6 @@
                 </div>
             </div>
         </div>
-    </div>
-
-    <!-- 🎵 BOTÃO DE ANÁLISE DE MÚSICA - Posicionado abaixo do chat -->
-    <div class="music-analysis-section" style="
-        position: fixed;
-        top: 680px;
-        left: 50%;
-        transform: translateX(-50%);
-        z-index: 1000;
-        width: 800px;
-        max-width: 90vw;
-        display: flex;
-        justify-content: center;
-        padding-top: 20px;
-        box-sizing: border-box;
-    ">
-        <button class="music-analysis-btn" onclick="openAudioModal()" id="musicAnalysisBtn" style="
-            background: linear-gradient(135deg, rgba(0, 150, 255, 0.2), rgba(100, 200, 255, 0.15));
-            border: 1px solid rgba(0, 150, 255, 0.4);
-            border-radius: 20px;
-            padding: 8px 16px;
-            color: rgba(255, 255, 255, 0.9);
-            font-family: 'Poppins', sans-serif;
-            font-size: 0.8rem;
-            font-weight: 500;
-            cursor: pointer;
-            backdrop-filter: blur(15px);
-            box-shadow: 0 4px 15px rgba(0, 150, 255, 0.2);
-            transition: all 0.3s ease;
-            display: flex;
-            align-items: center;
-            gap: 8px;
-            min-height: 44px;
-            min-width: 120px;
-            touch-action: manipulation;
-            -webkit-tap-highlight-color: rgba(0, 150, 255, 0.2);
-            user-select: none;
-            box-sizing: border-box;
-        ">
-            <svg width="16" height="16" viewBox="0 0 24 24" fill="currentColor">
-                <path d="M3 9v6h4l5 5V4L7 9H3zm13.5 3c0-1.77-1.02-3.29-2.5-4.03v8.05c1.48-.73 2.5-2.25 2.5-4.02zM14 3.23v2.06c2.89.86 5 3.54 5 6.71s-2.11 5.85-5 6.71v2.06c4.01-.91 7-4.49 7-8.77s-2.99-7.86-7-8.77z"/>
-            </svg>
-            <span>Análise de Música</span>
-        </button>
     </div>
 
     <!-- Botões de ação do chatbot -->
@@ -257,6 +235,143 @@
                     console.warn('⚠️ initializeAudioAnalyzerIntegration não encontrada');
                 }
             }, 1000);
+
+            // Patch para botões "+" - setup do menu popover
+            (function setupPlusPopover() {
+              const container = document.querySelector('.chatbot-input-field.chat-input-container');
+              const plusBtn   = container?.querySelector('.chatbot-add-btn.chat-plus-btn');
+              if (!container || !plusBtn) return requestAnimationFrame(setupPlusPopover);
+
+              // Garante que o popover não afete o layout
+              container.style.position = (getComputedStyle(container).position === 'static') ? 'relative' : getComputedStyle(container).position;
+
+              // Remove versões antigas
+              container.querySelector('.chatplus-popover')?.remove();
+
+              // Cria popover
+              const pop = document.createElement('div');
+              pop.className = 'chatplus-popover';
+              pop.setAttribute('role', 'menu');
+              pop.setAttribute('aria-hidden', 'true');
+              Object.assign(pop.style, {
+                position: 'absolute',
+                left: '8px',
+                bottom: 'calc(100% + 10px)',   // fica acima do input
+                minWidth: '220px',
+                background: '#0e0f1a',
+                color: '#e9e9f1',
+                border: '1px solid rgba(255,255,255,.08)',
+                borderRadius: '12px',
+                boxShadow: '0 10px 30px rgba(0,0,0,.35)',
+                padding: '6px',
+                opacity: '0',
+                transform: 'scale(.98) translateY(4px)',
+                pointerEvents: 'none',
+                transition: 'opacity .15s ease, transform .15s ease',
+                zIndex: '9999'
+              });
+
+              // Helper p/ criar item
+              const mkItem = (label, action, svg) => {
+                const b = document.createElement('button');
+               b.className = 'chatplus-item';
+                b.setAttribute('role', 'menuitem');
+                b.dataset.action = action;
+                Object.assign(b.style, {
+                  width: '100%',
+                  textAlign: 'left',
+                  padding: '10px 12px',
+                  border: '0',
+                  background: 'transparent',
+                  color: 'inherit',
+                  borderRadius: '8px',
+                  fontSize: '14px',
+                  display: 'flex',
+                  gap: '10px',
+                  alignItems: 'center',
+                  cursor: 'pointer'
+                });
+                b.onpointerenter = () => (b.style.background = 'rgba(255,255,255,.06)');
+                b.onpointerleave = () => (b.style.background = 'transparent');
+                b.innerHTML = `${svg}<span>${label}</span>`;
+                return b;
+              };
+
+              const clipSVG = `<svg width="18" height="18" viewBox="0 0 24 24" fill="none" style="display:block;stroke:#cfcff9;stroke-width:1.8"><path d="M8 12l6-6a4 4 0 1 1 6 6l-8 8a5 5 0 1 1-7-7l8-8"/></svg>`;
+              const audioSVG = `<svg width="18" height="18" viewBox="0 0 24 24" fill="none" style="display:block;stroke:#cfcff9;stroke-width:1.8"><path d="M3 12h2m2 0h2m2-6v12m4-9v6m4-3h2"/></svg>`;
+
+              const addPhotos   = mkItem('Adicionar fotos', 'upload',  clipSVG);
+              const analyzeSong = mkItem('Analisar música', 'analyze', audioSVG);
+              pop.append(addPhotos, analyzeSong);
+              container.appendChild(pop);
+
+              // Abrir/fechar
+              function open() {
+                pop.setAttribute('aria-hidden', 'false');
+                pop.style.opacity = '1';
+                pop.style.transform = 'scale(1) translateY(0)';
+                pop.style.pointerEvents = 'auto';
+                plusBtn.setAttribute('aria-expanded', 'true');
+                addPhotos.focus();
+                document.addEventListener('pointerdown', onOutside, { capture: true });
+                document.addEventListener('keydown', onKey);
+              }
+              function close() {
+                pop.setAttribute('aria-hidden', 'true');
+                pop.style.opacity = '0';
+                pop.style.transform = 'scale(.98) translateY(4px)';
+                pop.style.pointerEvents = 'none';
+                plusBtn.setAttribute('aria-expanded', 'false');
+                document.removeEventListener('pointerdown', onOutside, { capture: true });
+                document.removeEventListener('keydown', onKey);
+              }
+              function toggle() {
+                (pop.getAttribute('aria-hidden') === 'true') ? open() : close();
+              }
+              function onOutside(e) {
+                if (!pop.contains(e.target) && e.target !== plusBtn) close();
+              }
+              function onKey(e) {
+                if (e.key === 'Escape') return close();
+                const items = [addPhotos, analyzeSong];
+                const i = items.indexOf(document.activeElement);
+                if (e.key === 'ArrowDown') { (items[i+1] || items[0]).focus(); e.preventDefault(); }
+                if (e.key === 'ArrowUp')   { (items[i-1] || items.at(-1)).focus(); e.preventDefault(); }
+              }
+
+              plusBtn.setAttribute('aria-haspopup', 'menu');
+              plusBtn.setAttribute('aria-expanded', 'false');
+              plusBtn.addEventListener('click', toggle);
+
+              // Ações
+              pop.addEventListener('click', (e) => {
+                const btn = e.target.closest('.chatplus-item');
+                if (!btn) return;
+                if (btn.dataset.action === 'upload') {
+                  let fileInput = container.querySelector('input[type="file"].chatplus-file');
+                  if (!fileInput) {
+                    fileInput = document.createElement('input');
+                    fileInput.type = 'file';
+                    fileInput.accept = 'image/*';
+                    fileInput.multiple = true;
+                    fileInput.hidden = true;
+                    fileInput.className = 'chatplus-file';
+                    container.appendChild(fileInput);
+                  }
+                  fileInput.onchange = () => {
+                    window.dispatchEvent(new CustomEvent('chat:add-photos', { detail: fileInput.files }));
+                    fileInput.value = '';
+                  };
+                  fileInput.click();
+                  close();
+                }
+                if (btn.dataset.action === 'analyze') {
+                  if (typeof window.openAudioModal === 'function') window.openAudioModal();
+                  else window.dispatchEvent(new CustomEvent('chat:analyze-audio-request'));
+                  close();
+                }
+              });
+            })();
         });
     </script>
     
