analise de mixagem certo

--- a/public/index.html
+++ b/public/index.html
@@ -184,7 +184,7 @@
             <!-- Loading -->
             <div id="audioAnalysisLoading" class="audio-loading" style="display: none;">
                 <div class="loading-spinner"></div>
-                <p id="audioProgressText">Analisando áudio...</p>
+                <p id="audioProgressText">🚀 Inicializando Sistema de Análise...</p>
                 <div class="progress-bar">
                     <div class="progress-fill" id="audioProgressFill"></div>
                 </div>
